<resources>
    <string name="app_name">FinalProject-RishikaJ</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="anorexia">"Anorexia Nervosa"</string>
    <string name="bulimia">"Bulimia Nervosa"</string>
    <string name="binge_eating">"Binge Eating Disorder"</string>
    <string name="ednos">"Eating Disorder Not Otherwise Specified"</string>
    <string name="daily_challenge">"Daily Challenge"</string>
    <string name="skills">"Skills"</string>
    <string name="nutrition">"Nutrition"</string>
    <string name="relapse_prevention">"Relapse Prevention"</string>
    <string name="challenge_note">"Challenge Note"</string>
    <string name="write_note">"Write a note"</string>
    <string name="save_challenge">"Save this challenge"</string>
    <string name="home">"Go to home page"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="go_to_profile">"Go to Profile"</string>

</resources>
