<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rishika.finalproject_rishikaj.SignUpFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"/>

        <!--<EditText-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="Email"/>-->

        <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="Password"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Relationship to patient :"
            android:id="@+id/relationship_label"/>

        <!--<LinearLayout-->
           <!--android:layout_width="match_parent"-->
           <!--android:layout_height="wrap_content"-->
           <!--android:orientation="horizontal">-->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relationship_group"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Parent"
                android:id="@+id/parent"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sibling"
                android:id="@+id/sibling"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Child"
                android:id="@+id/child"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Partner"
                android:id="@+id/partner"/>

        </RadioGroup>
        <!--</LinearLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details of Patient :"
            android:id="@+id/details_label" />

        <TextView
            android:id="@+id/diagnosis_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Diagnosis :"/>

        <CheckBox
            android:id="@+id/anorexia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anorexia" />

        <CheckBox
            android:id="@+id/bulimia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulimia"/>

            <CheckBox
                android:id="@+id/binge_eating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binge_eating"/>

            <CheckBox
                android:id="@+id/ednos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ednos"/>


        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Age"/>

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Gender: "/>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_group">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/non_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non-binary" />

            <RadioButton
                android:id="@+id/transgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Transgender" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other" />

        </RadioGroup>
        <!--</LinearLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stage of Recovery"
            android:id="@+id/stage_label"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stage_group">

                <RadioButton
                    android:id="@+id/untreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Never been treated"/>

                <RadioButton
                    android:id="@+id/in_recovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Recovery" />

                <RadioButton
                    android:id="@+id/in_treatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Treatment" />

                <RadioButton
                    android:id="@+id/relapsing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Relapsing" />
            </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_gravity="center"
            android:onClick="saveProfile"/>

        <TextView
            android:id="@+id/display_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:visibility="invisible"
            android:background="#eeeeee"/>

    </LinearLayout>

</ScrollView>
